add jquery in cau 6

--- a/lab-2/cau-6-jquery/index.html
+++ b/lab-2/cau-6-jquery/index.html
@@ -104,6 +104,7 @@
       <section id="information-container"></section>
       <section id="invoice-container"></section>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
